Update src/main/java/de/tum/in/www1/artemis/service/ResultService.java
Co-authored-by: Johannes Stöhr <38322605+JohannesStoehr@users.noreply.github.com>